--- a/components/records/RecordBottomSheet.module.css
+++ b/components/records/RecordBottomSheet.module.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 200;
+  z-index: 2000;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
